# Needham-Schroeder-Protocol

./: .gitmodules  CMakeLists.txt  README.md  alice.cc  bob.cc  key_distribution_center.cc  main.cc
modules/DES_cipher/: des_cipher.cc
